# RTin1week

./: CMakeLists.txt
include/: camera.h  hittable.h  hittable_list.h  interval.h  material.h  vec3.h
src/: main.cpp
